--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,12 +1,12 @@
 .main{
-    background-color: #e9ebee;
+    background-color:#E5E5E5;
     min-height: 576px;
     width: 100%;
     height: 100%;
 }
 
 .panel{
-    margin-left: 40px;
+    margin-left: 15px;
     padding-top: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -14,5 +14,6 @@
 
 .headerContainer {
     display: flex;
+    margin-left: 70px;
     flex-direction: column;
 }
