--- a/src/Styles/socialcard.css
+++ b/src/Styles/socialcard.css
@@ -1,12 +1,17 @@
 .icon{/* width must be same size as NavBar to center */
     display: flex; /* Aligns <a> inside of NavIcon div */
-    font-size: 4.5em;
+    font-size: 2em;
     opacity:0.7;
     margin-bottom: 10px;
     margin-left: 30%;
     align-self: center;
+    border-radius: 50%;
 }
 
 .card:hover .icon{
     opacity: 1;
+}
+
+.card {
+    border-radius: 25px;
 }
